# tocin-compiler

./: .gitignore  CMakeLists.txt  COMPLETION_SUMMARY.md  CRITICAL_FIXES_COMPLETED.md  Doxyfile.in  ENHANCEMENT_COMPLETION_REPORT.md  FINAL_REPORT.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  INTERPRETER_COMPLETION.md  LICENSE  QUICKSTART_NEW_FEATURES.md  QUICK_REFERENCE.md  README.md  build_installer_complete.ps1  build_installer_windows.ps1  build_msys2.sh  build_standalone.bat  build_tocin.bat  build_windows.ps1  cmake_uninstall.cmake.in  compiler_fixes.md  create_simple_installer.ps1  debug_lexer.cpp  fix_dlls.ps1  flowchart.mermaid  lexer_fixed.cpp  test.to  test_assignment_final.to  test_basic.to  test_comment.to  test_comprehensive.to  test_copy.to  test_def_only.to  test_empty.to  test_func.to  test_interpreter_completion.py  test_noparam.to  test_oneparam.to  (+9 more)
.cursor/commands/: create-contex.md
.github/workflows/: ci.yml
.history/: build_instructions_20250514100450.txt  vcpkg_20250512154705.json  vcpkg_20250512154707.json
.history/tocin-compiler/: BUILD_INSTRUCTIONS_20250513055314.md  BUILD_INSTRUCTIONS_20250513055537.md  BUILD_INSTRUCTIONS_20250513061037.md  BUILD_INSTRUCTIONS_20250513085652.md  CMakeLists_20250511093350.txt  CMakeLists_20250511093352.txt  CMakeLists_20250511093402.txt  CMakeLists_20250512122606.txt  CMakeLists_20250512160923.txt  CMakeLists_20250512160931.txt  CMakeLists_20250512160937.txt  CMakeLists_20250512161451.txt  CMakeLists_20250512163434.txt  CMakeLists_20250512164538.txt  CMakeLists_20250512164732.txt  CMakeLists_20250512165449.txt  CMakeLists_20250512170902.txt  CMakeLists_20250512225143.txt  CMakeLists_20250513044310.txt  CMakeLists_20250513045451.txt  CMakeLists_20250513052602.txt  CMakeLists_20250513052630.txt  CMakeLists_20250513052643.txt  CMakeLists_20250513052659.txt  CMakeLists_20250513053014.txt  CMakeLists_20250513053018.txt  CMakeLists_20250513101416.txt  CMakePresets_20250511093632.json  IMPLEMENTED_FEATURES_20250513101350.md  LANGUAGE_ROADMAP_20250511014707.md  PROGRESS_REPORT_20250512230825.md  PROGRESS_REPORT_20250513044236.md  PROGRESS_REPORT_20250513061147.md  README_20250511011751.md  build_20250511133731.sh  build_20250512230109.ps1  build_20250512230110.ps1  build_20250512230309.ps1  build_project_20250512170232.sh  build_with_llvm_20250513053043.ps1  (+14 more)
benchmarks/: advanced_features_bench.cpp  benchmark_runtime_linq.to  run_benchmarks.ps1
build-linux/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake
docs/: 01_Introduction.md  04_Standard_Library.md  05_Advanced_Topics.md  ADVANCED_FEATURES.md  ARCHITECTURE.md  CONCURRENCY.md  ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_STATUS.md  INSTALLER_ENHANCEMENTS.md  INSTALLER_GUIDE.md  INTEGRATION_GUIDE.md  INTERPRETER_GUIDE.md  LANGUAGE_FEATURES.md  LEXER_PARSER_ENHANCEMENTS.md  NEW_FEATURES.md  OPTIMIZATION_IMPROVEMENTS.md  PARSER_SYNTAX_REFINEMENTS.md  README.md  STDLIB_GUIDE.md  V8_INTEGRATION_ROADMAP.md
examples/: README.md  game_demo.to  gui_demo.to  ml_demo.to
installer/: build_installer.ps1  build_installer.sh
installer/windows/: installer.nsi
installer_package/: README.txt  install.bat  test_tocin.bat  uninstall.bat
interpreter/: CMakeLists.txt  build_packages.sh
interpreter/include/: Environment.h
interpreter/installer/linux/debian/: control
interpreter/resources/: convert_icon.sh
interpreter/src/: Builtins.cpp  Interpreter.cpp  Runtime.cpp
src/: llvm_shim.h  main.cpp  target_info.h
src/ast/: ast.h  ast_node.h  defer_stmt.h  expr.h  option_result_expr.cpp  stmt.h  types.h
src/codegen/: ir_generator.cpp  ir_generator.h
src/compiler/: advanced_optimizations.cpp  advanced_optimizations.h  compilation_context.cpp  compilation_context.h  compiler.cpp  compiler.h  macro_system.cpp  stdlib.cpp  stdlib.h  tocin_stdlib.h
src/debugger/: debugger.h
src/error/: error_handler.cpp  error_handler.h
src/ffi/: cpp_ffi.h  ffi_cpp.cpp  ffi_cpp.h  ffi_cpp_improvements.cpp  ffi_interface.h  ffi_javascript.cpp  ffi_javascript.h  ffi_python.cpp  ffi_python.h  ffi_value.h  js_ffi.h  python_ffi.h
src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
src/parser/: parser.cpp  parser.h
src/runtime/: async_system.h  concurrency.cpp  concurrency.h  lightweight_scheduler.cpp  lightweight_scheduler.h  linq.h  native_functions.cpp  native_functions.h
src/type/: extension_functions.h  feature_integration.cpp  feature_integration.h  null_safety.cpp  null_safety.h  option_result_types.h  ownership.cpp  ownership.h  result_option.h  trait.h  traits.cpp  traits.h  type_checker.cpp  type_checker.h  type_system_enhanced.cpp  type_system_enhanced.h
tests/: test_codegen.cpp  test_compiler_integration.to  test_error_handling.to  test_framework.cpp  test_framework.h  test_lexer.cpp  test_linq.to  test_null_safety.to  test_optimizer.cpp  test_parser.cpp  test_runner.cpp  test_stdlib_string.to  test_type_checker.cpp
tocin-compiler/: BUILD_INSTRUCTIONS.md  CMakeCache.txt  CMakeLists.txt  README.md  vcpkg.json
tocin-compiler/examples/: concurrency_demo.to
tocin-compiler/src/: llvm_shim.h  main.cpp  pch.h
tocin-compiler/src/ast/: ast.cpp  ast.h  match_stmt.cpp  option_result_expr.cpp  property.h  types.h
tocin-compiler/src/codegen/: ir_generator.cpp  ir_generator.h
tocin-compiler/src/compiler/: compilation_context.cpp  compilation_context.h  compiler.cpp  stdlib.cpp  stdlib.h
tocin-compiler/src/error/: error_handler.cpp  error_handler.cpp.bak  error_handler.h
tocin-compiler/src/ffi/: ffi_cpp.cpp  ffi_cpp.h  ffi_interface.h  ffi_javascript.cpp  ffi_javascript.h  ffi_python.cpp  ffi_python.h  ffi_value.h
tocin-compiler/src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
tocin-compiler/src/parser/: parser.cpp  parser.h
tocin-compiler/src/runtime/: native_functions.cpp
tocin-compiler/src/type/: extension_functions.h  feature_integration.h  ownership.h  type_checker.cpp  type_checker.h
tocin-compiler/stdlib/ml/: neural_network.to
tocin-compiler/stdlib/web/: http.to
(+1169 files in other folders)
